hphp/hack/test/typecheck/call_user_func_method.php.exp
File "call_user_func_method.php", line 21, characters 3-16:
The builtin `call_user_func` is deprecated. (Typing[4128])
